ucurve investigation plan